leaf1/networkpolicy-allow-leaf2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-leaf2
  namespace: networkpolicy-leaf1
spec:

  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: networkpolicy-leaf2
      # - podSelector:
      #     matchLabels:
      #       name: leaf2
