leaf1/networkpolicy-allow-same-namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-namespace
  namespace: networkpolicy-leaf1
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
