leaf1/networkpolicy-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: networkpolicy-leaf1
spec:
  podSelector:
  ingress: []
